Iniciando o banco de dados e colocando para funcionar!

--- a/sitealura/package.json
+++ b/sitealura/package.json
@@ -9,6 +9,7 @@
   "author": "felipe alencar",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "mysql": "^2.12.0"
   }
 }
