--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "sitealura",
 	"version": "1.0.0",
 	"description": "Site do curso alura, listagem de produtos e etc",
-	"main": "index.js",
+	"main": "app.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 	  	"start: "node app.js"
