--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-	"name": "sitealura",
-	"version": "1.0.0",
-	"description": "Site do curso alura, listagem de produtos e etc",
-	"main": "app.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-	  	"start": "node app.js"
-
-	},
-	"author": "felipe alencar",
-	"license": "ISC",
-	"dependencies": {
-		"express": "^4.14.0",
-		"mysql": "^2.12.0"
-	}
+  "name": "sitealura",
+  "version": "1.0.0",
+  "description": "Site do curso alura, listagem de produtos e etc",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
+  },
+  "author": "felipe alencar",
+  "license": "ISC",
+  "dependencies": {
+    "ejs": "^2.5.5",
+    "express": "^4.14.0",
+    "mysql": "^2.12.0"
+  }
 }
