--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "felipe alencar",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
     "express-load": "^1.1.15",
