--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "express": "^4.14.0",
     "express-load": "^1.1.15",
     "mysql": "^2.12.0"
+  },
+  "devDependencies": {
+    "mocha": "^3.2.0"
   }
 }
